# muster_server

./: .env  Cargo.toml  Dockerfile  config.yaml  spec.yaml  sqlx-data.json
config/: base.yaml  production.yaml  test.yaml
migrations/: 20231020202553_initial.sql  20231103204345_user_email_confirmation.sql  20231106155513_create_user_subscription_tokens_table.sql  20240219172134_add_chat_entities.sql  20240713220812_delete_chat_entities.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs
src/consts/: headers.rs
src/domain/: mod.rs
src/domain/chat/: direct_message.rs  mod.rs
src/domain/confirmation_token/: mod.rs  tests.rs
src/domain/email/: mod.rs
src/domain/email/client/: confirmation_email.rs  mod.rs  tests.rs
src/domain/mailer/: confirmation_email.rs  mod.rs
src/domain/server/: mod.rs  request.rs  update.rs
src/domain/user/: api.rs  email.rs  handle.rs  login.rs  mod.rs  password.rs  tests.rs
src/domain/user/credentials/: email.rs  handle.rs  login.rs  mod.rs  password.rs
src/handlers/: health_check.rs  mod.rs  server.rs  user.rs
src/handlers/middleware/: auth.rs
src/handlers/server/: create.rs  delete.rs  mod.rs  update.rs
src/handlers/user/: confirm.rs  delete.rs  get.rs  login.rs  mod.rs  patch.rs  signup.rs  update.rs
src/handlers/websockets/chat/: message.rs  mod.rs  session.rs
src/storage/: chat.rs  confirmation_token.rs  mod.rs  server.rs  user.rs
src/storage/types/: confirmation_token.rs  mod.rs  user.rs
src/utils/: credentials.rs  jwt.rs  mod.rs  password.rs  telemetry.rs  test.rs
tests/: health_check.rs  server.rs  user.rs  utils.rs
tests/api/: health_check.rs  main.rs  mod.rs  server.rs  user.rs  utils.rs
tests/api/server/: create.rs  delete.rs  update.rs
tests/api/user/: confirm.rs  delete.rs  get.rs  login.rs  mod.rs  patch.rs  signup.rs  update.rs
tests/utils/: app.rs  db.rs  jwt.rs  mod.rs  server.rs
tests/utils/db/: confirmation_token.rs  mod.rs  server.rs  user.rs
tests/utils/http_client/: header.rs  mod.rs  path.rs
