[package]
name = "muttr_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "muttr_server"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13.3"
chrono = "0.4.31"
uuid = { version = "1", features = ["v4"] }
rust-argon2 = "2.0"
rand = "0.8.5"
time = "0.3.30"
hmac = "0.12.1"
sha2 = "0.10.8"
jsonwebtoken = "9.1.0"
serde_json = "1.0.107"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.4"
futures = "0.3.28"
futures-timer = "3.0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.8"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = "0.11.22"
once_cell = "1"
